fixed mentor code review comments.